Fix spacing issues with flexbox

--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ button {
 #main-container {
     width: 300px;
     height: 500px;
-    background-color: rgb(63, 60, 60);
+    background-color: rgb(61, 61, 61);
     padding: 15px;
     margin: 200px auto;
     border-radius: 15px;
@@ -25,6 +25,7 @@ button {
     flex-direction: column;
     flex-wrap: nowrap;
     gap: 2px;
+    margin: 10px auto;
 }
 
 .btn-row {
@@ -47,11 +48,13 @@ button {
 }
 
 #screen-container {
-    height: 175px;
+    height: 160px;
     width: auto;
     background-color: darkgray;
-    margin: 5px;
+    margin: 10px 5px;
     border-radius: 5px;
+    display: flex;
+    flex-direction: column;
 }
 
 .number-btn {
@@ -59,17 +62,21 @@ button {
 }
 
  .action-btn {
-    background-color: rgb(109, 132, 153);
+    background-color: rgb(135, 190, 194);
  }
 
  .operator-btn {
-    background-color: orange;
+    background-color: rgb(255, 165, 0);
  }
 
  .del-btn {
-    background-color: rgb(224, 86, 86);
+    background-color: rgb(253, 82, 91);
  }
 
  /* #container {
     background-color: rgb(110, 74, 20);
  } */
+
+ button:hover {
+    background-color: rgba(230, 242, 253, 0.719);
+ }
